--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
-                    xmlns:assistant="clr-namespace:CookPopularControl.Controls.Progress"
-                    xmlns:progress="clr-namespace:CookPopularControl.Controls.Progress">
+                    xmlns:assistant="clr-namespace:CookPopularControl.Controls.Progress">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/BaseStyle/ProgressBarBaseStyle.xaml" />
@@ -16,7 +15,7 @@
 
     <Style x:Key="CircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarBaseStyle}">
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}" />
-        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="5" />
         <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
@@ -29,6 +28,18 @@
     <Style x:Key="LoadingCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
         <Setter Property="Value" Value="0" />
         <Setter Property="IsIndeterminate" Value="True" />
+    </Style>
+
+    <Style x:Key="WaveProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource WaveProgressBarBaseStyle}">
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}"/>
+        <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="5" />
+        <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
+        <Setter Property="assistant:ProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
+        <Setter Property="assistant:WaveProgressBarAssistant.WaveHeight" Value="30" />
+        <Setter Property="assistant:WaveProgressBarAssistant.WaveStroke" Value="{DynamicResource BorderBrushColor}" />
+        <Setter Property="assistant:WaveProgressBarAssistant.WaveStrokeThickness" Value="2" />
+        <Setter Property="FontSize" Value="20" />
     </Style>
 
 </ResourceDictionary>
