--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -9,17 +9,17 @@
 
     <Style x:Key="DefaultProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource LinearProgressBarBaseStyle}">
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
-        <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="assistant:ProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
+        <Setter Property="assistant:LinearProgressBarAssistant.IsShowPercent" Value="True" />
+        <Setter Property="assistant:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
     </Style>
 
     <Style x:Key="CircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarBaseStyle}">
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="5" />
-        <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="assistant:ProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="assistant:CircularProgressAssistant.ArcThickness" Value="5" />
+        <Setter Property="assistant:LinearProgressBarAssistant.IsShowPercent" Value="True" />
+        <Setter Property="assistant:LinearProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForeground}" />
         <Setter Property="FontSize" Value="{DynamicResource Double20Value}" />
     </Style>
     <Style x:Key="IndeterminateCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
@@ -33,9 +33,9 @@
     <Style x:Key="WaveProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource WaveProgressBarBaseStyle}">
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}"/>
-        <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="5" />
-        <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
-        <Setter Property="assistant:ProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
+        <Setter Property="assistant:CircularProgressAssistant.ArcThickness" Value="5" />
+        <Setter Property="assistant:LinearProgressBarAssistant.IsShowPercent" Value="True" />
+        <Setter Property="assistant:LinearProgressBarAssistant.TextColor" Value="{DynamicResource AssistantForeground}" />
         <Setter Property="assistant:WaveProgressBarAssistant.WaveHeight" Value="30" />
         <Setter Property="assistant:WaveProgressBarAssistant.WaveStroke" Value="{DynamicResource BorderBrushColor}" />
         <Setter Property="assistant:WaveProgressBarAssistant.WaveStrokeThickness" Value="2" />
